<resources>
    <string name="app_name">AIC Siembra</string>
    <string name="actualizar">Actualizar</string>
    <string name="registrar">Registrar</string>
    <string name="rancho">Rancho</string>
    <string name="alias">Alias</string>
    <string name="tabla">Tabla</string>
    <string name="producto">Producto</string>
    <string name="area">Area</string>
    <string name="actividad">Actividad</string>
    <string name="tipo_grupo">Tipo Grupo</string>
    <string name="flete_regular">Flete Regular</string>
    <string name="flete_incompleto">Flete Incompleto</string>
    <string name="flete_persona">Flete Por Persona</string>
    <string name="flete_cabraliego">Flete Cabraliego</string>
    <string name="flete_escondida">Flete Escondida</string>
    <string name="trabajador">Trabajador</string>
    <string name="grupo">Grupo</string>
    <string name="nombres">Nombres</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="genero">Género</string>
    <string name="seguro_social">Seguro Social</string>
    <string name="curp">CURP</string>
    <string name="rfc">RFC</string>
    <string name="domicilio">Domicilio</string>
    <string name="sueldo">Sueldo</string>
    <string name="hora_extra">Hora Extra</string>
    <string name="bono">Bono</string>
    <string name="fecha">Fecha</string>
    <string name="motivo">Motivo</string>
    <string name="cantidad">Cantidad</string>
    <string name="hora_entrada">Hora Entrada</string>
    <string name="hora_salida">Hora Salida</string>
    <string name="trabajadores">Trabajadores</string>
    <string name="tablas">Tablas</string>
    <string name="actividades">Actividades</string>
    <string name="total">Total</string>
</resources>