<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_actividades"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="6sp"
                android:text="@string/actividades"
                app:drawableEndCompat="@drawable/ic_chevron_right" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_actividades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_lista_selected" />

            <TextView
                android:id="@+id/select_trabajadores"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="6sp"
                android:text="@string/trabajadores"
                app:drawableEndCompat="@drawable/ic_chevron_right" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_trabajadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_lista_selected" />

            <TextView
                android:id="@+id/select_tablas"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="6sp"
                android:text="@string/tablas"
                app:drawableEndCompat="@drawable/ic_chevron_right" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tablas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_lista_selected" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/form_actividades_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/registrar" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>